# SimultIte

./: .gitignore  CMakeLists.txt  README.md  launch.sh  test.mtx
docs/: Doxyfile.in
header/: cl_utils.h  define.h  executable_options.h  gram_schmidt.h  matrix_reader.h
src/: cl_utils.c  executable_options.c  gram_schmidt.c  main.c  matrix_reader.c
